# library_conflict_demo

./: CMakeLists.txt  README.md  foo.c  lib_v1.0.cpp  lib_v1.1.cpp  libfoo.version  main.cpp  readme.md  wrapper.cpp
